Department Form with Logo and Staff Members
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Facility/InstituteBundle/Resources/views/Department/memberCollection.js.html.twig
+++ b/src/Busybee/Facility/InstituteBundle/Resources/views/Department/memberCollection.js.html.twig
@@ -15,7 +15,7 @@
                 if (id == '0') {
                     return true;
                 }
-                return staffRemove(id);
+                return memberRemove(id);
             }
         });
 
