Setting Entity/Manager Work
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Busybee/Core/TemplateBundle/Resources/views/Default/style.html.twig
+++ b/src/Busybee/Core/TemplateBundle/Resources/views/Default/style.html.twig
@@ -8,6 +8,6 @@
 
 <style type="text/css">
     body {
-        background-image: url({{ absolute_url(asset(get_setting('Background.Image', 'img/backgroundPage.jpg'))) }});
+        background-image: url({{ absolute_url(asset(get_setting('background.image', 'img/backgroundPage.jpg'))) }});
     }
 </style>
