--- a/src/Busybee/Core/CalendarBundle/Resources/views/Calendar/year.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Calendar/year.html.twig
@@ -16,6 +16,7 @@
         </div>
         <div class="col-sm-2 well">
             {{ form_row(form.status) }}
+            {{ form_row(form.downloadCache, {value: ''}) }}
         </div>
     </div>
 </div>
