--- a/src/Busybee/Core/TemplateBundle/Resources/views/Default/template.html.twig
+++ b/src/Busybee/Core/TemplateBundle/Resources/views/Default/template.html.twig
@@ -91,6 +91,7 @@
             {{ include('@BusybeeTemplate/Default/footer.html.twig') }}
         {% endblock footerContainer %}
     </div> <!-- /container footer -->
+        <div class="showLoader"><!-- Place at bottom of page --></div>
 
 
     {% block javascripts %}
