--- a/web/css/main.css
+++ b/web/css/main.css
@@ -516,7 +516,7 @@ div#contentContainer {
 
 .sectionHeader {
     font-size: smaller;
-    padding: 0;
+    padding: 10px 0 0 0;
     margin: 5px 0;
     text-decoration: underline;
     font-variant: petite-caps;
