--- a/src/Busybee/People/StudentBundle/Resources/views/Person/gradeCollection.html.twig
+++ b/src/Busybee/People/StudentBundle/Resources/views/Person/gradeCollection.html.twig
@@ -7,7 +7,7 @@
     {% set panelStyle = 'info' %}
     {% set transDomain = 'BusybeeStudentBundle' %}
     {% set header = 'student.grade.title' %}
-    {% set h3Content = '<div class="collection-actions collection-panel">' %}
+    {% set h3Content = '<div class="collection-actions collection-panel craig">' %}
     {% set id = '' %}
     {% set yearName = '(New)' %}
     {% if data is not null %}
@@ -30,4 +30,4 @@
         </div>
     </div>
     {% include '@BusybeeTemplate/Page/panelEnd.html.twig' %}
-{% endblock grade_by_student_widget %}
+{% endblock %}
