--- a/src/Busybee/Core/CalendarBundle/Resources/views/Grade/grade.html.twig
+++ b/src/Busybee/Core/CalendarBundle/Resources/views/Grade/grade.html.twig
@@ -7,6 +7,9 @@
     {% spaceless %}
         {% if form.grade.vars.value is empty %}{% set gradeTitle = 'grade.add.title'|trans %}{% else %}{% set gradeTitle = get_setting('student.groups._flip')[form.grade.vars.value] %}{% endif %}
         {% set h3Content = '<div class="collection-actions collection-panel">' %}
+        {% if manager.isStudentInstalled and value is not null %}
+            {% set h3Content = h3Content ~ editButton({title: 'student.grade.manage', transDomain: 'BusybeeStudentBundle', windowOpen: {route: path('student_add_to_grade', {id: value.id})}}) %}
+        {% endif %}
         {% set h3Content = h3Content ~ deleteButton({'title': 'grade.remove.title', 'transDomain': 'BusybeeCalendarBundle', 'class': 'halflings halflings-erase btn btn-warning collection-remove collection-action', 'style': 'float: right;'}) %}
         {% set h3Content = h3Content ~ saveButton({'name': 'grades'}) %}
         {% set h3Content = h3Content ~ '<span style="float: right;">&nbsp;</span>' %}
