--- a/src/Busybee/Core/TemplateBundle/Resources/views/Template/bootstrap.html.twig
+++ b/src/Busybee/Core/TemplateBundle/Resources/views/Template/bootstrap.html.twig
@@ -109,9 +109,10 @@
 {%- endblock widget_attributes -%}
 
 {% block choice_setting_label %}
-    <span class="halflings halflings-question-sign alert-info"
+    <span class="halflings halflings-info-sign alert-info"
           title="{{ 'setting.choice.name'|trans({'%name%': setting_name}, 'BusybeeTemplateBundle') }}"
-          style="float: left; margin: 2px 4px; 0 0;"></span>
+          style="float: left; margin: 2px 4px; 0 0;"
+          onclick="window.open('{{ path('setting_edit_name', {name: setting_name}) }}', 'SettingManage', 'width=1200,height=900')"></span>
     {{- form_label(form) -}}
 {% endblock choice_setting_label %}
 
