--- a/src/Busybee/People/PersonBundle/Resources/views/Person/edit.html.twig
+++ b/src/Busybee/People/PersonBundle/Resources/views/Person/edit.html.twig
@@ -36,7 +36,7 @@
                 {% if name == 'staff' and not isStaff() %}{% set disabled = ' class=disabled' %}{% endif %}
                 {% if name == 'student' and not isStudent() %}{% set disabled = ' class=disabled' %}{% endif %}
                 {% if name == 'immigration' and not isStudent() %}{% set disabled = ' class=disabled' %}{% endif %}
-                {% if name == 'grades' and (not isStudent() or not personManager.gradesInstalled()) %}{% set disabled = ' class=disabled' %}{% endif %}
+                {% if name == 'grades' and not isStudent() %}{% set disabled = ' class=disabled' %}{% endif %}
                 {% if name == 'user' and not isUser() %}{% set disabled = ' class=disabled' %}{% endif %}
                 <li{{ disabled }} role="presentation"><a href="#{{ name }}" role="tab"
                                                          data-toggle="tab">{{ tab.label|trans({}, translation) }}</a>
