--- a/src/Busybee/People/StudentBundle/Resources/views/Person/gradeStart.html.twig
+++ b/src/Busybee/People/StudentBundle/Resources/views/Person/gradeStart.html.twig
@@ -1,7 +1,8 @@
 <div class="panel panel-primary busybee-panel">
-    {% include "BusybeePersonBundle:Person:panelHeader.html.twig"  with {header: 'person.grade.title'} %}
+    {% include "@BusybeePerson/Person/panelHeader.html.twig"  with {header: 'person.grade.title'} %}
     <div class="panel-body">
 
-        {% include '@BusybeeStudent/Person/grade.html.twig' %}
-
+        <div class="gradeMessage"></div>
+        {{ form_widget(form.grades) }}
+        {% do form.grades.setRendered %}
 {% include '@BusybeeTemplate/Page/panelEnd.html.twig' %}
