--- a/src/Busybee/Core/TemplateBundle/Resources/views/Menu/section-menu.html.twig
+++ b/src/Busybee/Core/TemplateBundle/Resources/views/Menu/section-menu.html.twig
@@ -11,16 +11,23 @@
     {% endif %}
     {% for key in keys %}
         {% set data = link[key] %}
-        {% if routeExists(data['route']) %}
-            {% set target = '_self' %}
-            {% set options = '' %}
-            {% if data['target'] is defined %}
-                {% set target = data['target']['name'] %}
-                {% set options = data['target']['options'] %}
+        {% set test = true %}
+        {% if data['test'] is defined %}
+            {% set test = sectionMenuTest(data['test']) %}
+        {% endif %}
+        {% if test %}
+            {% if routeExists(data['route']) %}
+                {% set target = '_self' %}
+                {% set options = '' %}
+                {% if data['target'] is defined %}
+                    {% set target = data['target']['name'] %}
+                    {% set options = data['target']['options'] %}
+                {% endif %}
+                <div class="{{ data['linkClass'] }}">{{ miscButton({class: 'btn btn-link btn-sm', title: data['label']|trans, prompt: data['label']|trans, style: 'float: left;', windowOpen: {route: path(data['route'], data['params']), target: target, params: options}})|raw }}</div>
+            {% else %}
+                <div class="{{ data['linkClass'] }}"
+                     style="font-size: 12px; padding: 0 4px; margin: 0; color: #337ab7;">{{ 'system.route.missing'|trans({'%{route}': data['route']}) }}</div>
             {% endif %}
-            <div class="{{ data['linkClass'] }}">{{ miscButton({class: 'btn btn-link btn-sm', title: data['label']|trans, prompt: data['label']|trans, style: 'float: left;', windowOpen: {route: path(data['route'], data['params']), target: target, params: options}})|raw }}</div>
-        {% else %}
-            <div class="{{ data['linkClass'] }}">{{ 'system.route.missing'|trans({'%{route}': data['route']}) }}</div>
         {% endif %}
     {% endfor %}
 {% endfor %}
